--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -1,9 +1,13 @@
 $default-font: "roboto-example", sans-serif
 
+// font-family
 $font-sidebar-right: "ProximaNovaRegular"
+$font-text-box: "ProximaNovaRegular"
+$font-title: "ProximaNovaRegular"
 $font-nav-top: "ProximaNovaLight"
 $font-nav-top-num: "ProximaNovaBold"
-
+$font-big-text: "ProximaNovaBold"
+$font-headline: "ProximaNovaBold"
 $font-nav-top__logo-text: "BebasNeueBold"
 
 $accent: orange
@@ -12,7 +16,7 @@ $text: #333
 // Customization Bootstrap vars from "app/libs/bootstrap/scss/_variables.scss"
 $grid-gutter-width: 30px
 $grid-columns: 12
-$grid-breakpoints: (xs: 0, sm: 576px, md: 768px, lg: 992px, xl: 1200px)
+$grid-breakpoints: (xs: 0, sm: 576px, md: 768px, lg: 992px, xl: 1200px, xl-2: 1660px)
 $container-max-widths: (sm: 540px, md: 720px, lg: 960px, xl: 1140px)
 
 $gutter: $grid-gutter-width
@@ -22,6 +26,7 @@ $text-color-accent: #113b5f
 $text-color-second: #3abfef
 $bg-accent: #113b5f
 $bg-sidebar-right_hover: #3abfef
+$bg-bottom: #aacc3a
 
 // Цвет для текста
 $text-color-light: white
