--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -420,6 +420,47 @@ body
 		color: $text-color-light
 		text-decoration: none
 
+/* Плавное переключение слайдов CSS */
+.carousel-fade .carousel-inner .carousel-item 
+  	opacity: 0
+  	transition-property: opacity
+
+.carousel-fade .carousel-inner .active 
+  	opacity: 1
+
+.carousel-fade .carousel-inner .active.left,
+.carousel-fade .carousel-inner .active.right 
+  	left: 0
+  	opacity: 0
+  	z-index: 1
+
+.carousel-fade .carousel-inner .next.left,
+.carousel-fade .carousel-inner .prev.right 
+  	opacity: 1
+
+.carousel-fade .carousel-control 
+  	z-index: 2
+
+@media all and (transform-3d), (-webkit-transform-3d) 
+  	.carousel-fade .carousel-inner >.carousel-item.next,
+  	.carousel-fade .carousel-inner >.carousel-item.active.right 
+    	opacity: 0
+    	transform: translate3d(0, 0, 0)
+  
+  	.carousel-fade .carousel-inner >.carousel-item.prev,
+  	.carousel-fade .carousel-inner >.carousel-item.active.left 
+    	opacity: 0
+    	transform: translate3d(0, 0, 0)
+  
+  	.carousel-fade .carousel-inner >.carousel-item.next.left,
+  	.carousel-fade .carousel-inner >.carousel-item.prev.right,
+  	.carousel-fade .carousel-inner >.carousel-item.active 
+    	opacity: 1
+    	transform: translate3d(0, 0, 0)
+  
+
+/*  Fade Slider CSS END  */
+
 // SEC-2_END
   
 @import "media" // Always at the end
